client/src/index.scss
:root {
  --primary-color: #ec0000;
  --primary-light: #fd3e3e;
  --primary-dark: #a30202;
  --basic-text: #616161;
}

body {
  color: var(--basic-text);
  font-family: "Roboto Condensed",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* TODO: Separate out specific pieces of CSS */

* {
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

blockquote {
  font-size: 1rem;
  margin-top: 0.5rem;
  text-align: center;
}

blockquote p {
  background-color: var(--primary-light);
  border-radius: 5px;
  color: #eee;
  margin-bottom: 0.5rem;
  padding: 1rem;
}

blockquote p::before {
  content: "\201C";
}

blockquote p::after {
  content: "\201D";
}

blockquote footer {
  color: var(--primary-light);
  font-weight: 700;
}

blockquote footer::before,
blockquote footer::after {
  content: "\2014";
}

textarea {
  font-family: "Roboto Condensed", sans-serif;
}

/* ----------------- */

/* * Classes & IDs * */

/* ----------------- */

.overlay {
  background-color: rgba(255, 255, 255, 0.6);
  bottom: 0;
  display: none;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.overlay.enabled {
  display: initial;
}

.top-nav {
  background-color: #eee;
  height: 7vh;
  padding: 0.5rem 1rem;
}

.logo-container {
  width: 4rem;
}

.logo {
  height: auto;
  width: 100%;
}

.menu-btn-container,
.message-icon-container {
  background: none;
  border: none;
  margin: 0;
  outline: none;
  padding: 0;
  transition: transform 0.4s;
  z-index: 2;
}

.menu-btn {
  height: auto;
  outline: none;
  width: 3rem;
  z-index: 2;
}

.menu-btn-container:focus,
.menu-btn-container:hover {
  transform: scale(1.15);
}

.message-icon-container:focus,
.message-icon-container:hover {
  transform: scale(1.25);
}

.mobile-menu {
  background-color: white;
  border: 2px solid var(--primary-color);
  font-size: 2em;
  padding: 1rem 1rem 3rem;
  position: fixed;
  right: -80vw;
  top: 9vh;
  transition: right 0.7s;
  width: 65vw;
  z-index: 2;
}

.active-mobile-menu {
  right: 0;
}

.mobile-menu--list-link {
  color: var(--basic-text);
  outline: none;
  transition: text-decoration, text-shadow 0.7s;
}

.mobile-menu--list-link:focus,
.mobile-menu--list-link:hover {
  font-weight: 700;
  text-decoration: underline var(--primary-color);
  text-shadow: 0 0 1px var(--primary-color);
}

.mobile-menu--list {
  list-style-type: none;
}

.mobile-menu--list li {
  border-bottom: 1px solid #444;
  padding: 1rem;
}

.section--hero {
  background-image: url(./assets/steet-duo-bw.jpg);
  background-position: center;
  background-size: cover;
  height: 93vh;
  overflow: hidden;
  width: auto;
}

.hero-text {
  color: white;
  font-size: 16px;
  line-height: 1.5rem;
  text-shadow: 0 0 5px var(--primary-color), 0 0 10px #000, 0 0 16px #616161;
}

.hero-text-last {
  margin-top: 0.5rem;
  text-transform: uppercase;
}

.hero-btn {
  margin: 1rem 0 10rem 0;
}

.partition-img {
  width: 100%;
}

.feature-list-item {
  margin-bottom: 0.5rem;
}

.feature-list-item--marker {
  margin-right: 0.25rem;
  width: 2rem;
}

.my-section.section--use {
  background-color: #eee;
}

.use-list {
  text-align: center;
}

.use-img {
  width: 5rem;
}

.testimonial {
  width: 100%;
}

.testimonial-1,
.testimonial-2 {
  border-bottom: 4px solid #eee;
  margin-bottom: 2.5rem;
  padding-bottom: 2.5rem;
}

.testimonial-1-img,
.testimonial-2-img,
.testimonial-3-img {
  border-radius: 10px;
  width: 100%;
}

.my-section.section--help {
  background-color: #eee;
}

.bottom-cta-btn {
  margin: 2rem 0 0;
}

.footer {
  background-color: #616161;
  padding: 1rem;
}

.social-links {
  width: 10rem;
}

.social-icon {
  width: 2rem;
}

.register-container,
.edit-profile-container,
.view-profile-container {
  background-color: #fff;
  height: 91vh;
  width: 100vw;
}

.register-form,
.edit-profile-form,
.profile-container {
  background-color: #eee;
  border: none;
  border-radius: 5px;
  height: 80%;
  width: 80%;
}

.profile-container p {
  background-color: white;
  font-size: 16px;
  text-align: center;
}

.profile-title,
.post--title {
  color: var(--primary-dark);
  font-size: 2.8em;
}

.profile-field-heading {
  font-size: 1.6em;
  font-weight: 600;
}

.profile-field {
  border: 1px solid var(--primary-dark);
  border-radius: 5px;
  padding: 1rem;
  width: 80%;
}

.edit-profile-form > .genres > label,
.edit-profile-form > .instruments > label {
  margin-right: 1rem;
}

.register-form-bottom {
  font-size: 1.5em;
  text-align: center;
}

.login-link {
  color: var(--primary-light);
  display: block;
  margin-bottom: 1.6rem;
  outline: none;
  transition: color, font-weight, text-decoration 0.4s;
}

.login-link:focus,
.login-link:hover {
  color: var(--primary-dark);
  font-weight: 700;
  text-decoration: underline;
  text-decoration-color: var(--primary-dark);
}

.inputs-container {
  height: 60%;
  width: 100%;
}

.about-img-container {
  padding: 1rem 0;
}

.about-img {
  display: block;
  margin: 0 auto;
  max-width: 500px;
  width: 100%;
}

.search-input {
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  font-size: 14px;
  outline: none;
  padding: 0.75rem;
  transition: box-shadow 0.4s;
  width: 100%;
}

.search-button {
  background: none;
  border: none;
  border-radius: 50%;
  height: 2rem;
  outline: none;
  padding: 0;
  transition: transform 0.4s;
  width: 5rem;
}

.search-button:focus,
.search-button:hover {
  transform: scale(1.15);
}

.search-icon {
  transition: box-shadow 0.4s;
  width: 100%;
}

.posts {
  background-color: #fff;
  min-height: 90vh;
  padding: 2rem 0 3rem;
}

.post {
  background-color: #eee;
  border: 1px solid var(--primary-color);
  border-radius: 10px;
  box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
  margin: 2.25rem 0;
  padding: 0.5rem;
  width: 80%;
}

.post--title {
  font-weight: 700;
  margin: 0.25rem 0 0 0;
}

.post--username {
  color: var(--basic-text);
  font-size: 1.6em;
  font-weight: 700;
  margin: 0 0 0.5rem 0;
  outline: none;
  transition: text-decoration, color 0.4s;
}

.post--username:focus,
.post--username:hover {
  color: var(--primary-light);
  text-decoration: underline double var(--primary-light);
}

.post--content,
.post--content-create {
  color: var(--basic-text);
  font-size: 1.6em;
  margin: 0.5rem 0 3rem;
  padding: 0 1rem;
  text-align: center;
}

.post--content-create {
  height: 40vh;
  width: 90%;
}

// Post content and Message content
#content {
  border: 1px solid var(--basic-text);
  border-radius: 5px;
  height: 100%;
  outline: none;
  padding: 0.5rem;
  resize: none;
  transition: box-shadow 0.4s;
  width: 100%;
}

#content:focus,
#content:hover {
  box-shadow: 0 0 3px 3px var(--primary-dark);
}

.post-footer {
  padding: 0 2rem;
  width: 100%;
}

.post--date {
  color: var(--primary-light);
  font-size: 1em;
  margin: 0 0 0 1rem;
}

.post--message-icon {
  margin: 0 1rem 0 0;
  outline: none;
  transition: transform 0.4s;
  width: 2rem;
}

.write-post-icon {
  border-radius: 50%;
  bottom: 2rem;
  outline: none;
  position: fixed;
  right: 2rem;
  transition: transform 0.4s;
  width: 5rem;
}

.write-post-icon:focus,
.write-post-icon:hover {
  transform: scale(1.35);
}

.my-input.title-input {
  border: 1px solid var(--basic-text);
  border-radius: 5px;
  margin-top: 2rem;
  max-width: 500px;
  outline: none;
  padding: 1rem;
  width: 60%;
}

.my-input.title-input::placeholder {
  color: var(--basic-text);
}

.write-post-container {
  min-height: 100vh;
  padding: 1rem 0;
}

#write-post-heading,
#message-heading {
  margin: 2rem 0;
}

.message-recipient {
  color: var(--basic-text);
  font-size: 1.6em;
  margin: 1rem 0 2rem;
  outline: none;
  transition: text-decoration, color 0.4s;
}

.message-title {
  font-size: 1.6rem;
}

.message-content {
  color: var(--basic-text);
  font-size: 1.6em;
  margin: 1.5rem 0 3rem;
  padding: 0 1rem;
  text-align: center;
  width: 100%;
}

#message {
  border: 1px solid var(--basic-text);
  border-radius: 5px;
  height: 100%;
  margin-top: 2rem;
  max-height: 250px;
  max-width: 500px;
  outline: none;
  padding: 0.5rem;
  resize: none;
  transition: box-shadow 0.4s;
  width: 90%
}

#message::placeholder {
  color: var(--basic-text);
}

.message-date {
  color: var(--primary-light);
  font-size: 1em;
  margin: 0.5rem 0;
}

.send-msg-btn {
  background: none;
  border: none;
  padding: 0;
}

.send-message-icon {
  outline: none;
  transition: all 0.4s;
  width: 5rem;
}

.send-message-icon:focus,
.send-message-icon:hover {
  cursor: pointer;
  transform: scale(1.25);
}

/* --------------------- */

/* * Reuseable Classes * */

/* --------------------- */

.button {
  transition: all 0.4s;
}

.list {
  list-style-type: none;
}

.my-section {
  background-color: #fff;
  padding: 4rem 2rem;
}

.section-heading {
  border-bottom: 2px solid var(--primary-light);
  font-size: 3.6em;
  font-weight: 700;
  margin-bottom: 1rem;
}

.section-text {
  font-size: 2em;
}

.cta-btn,
.cancel-btn {
  border: 2px solid transparent;
  border-radius: 5px;
  font-size: 16px;
  font-weight: 700;
  outline: none;
  padding: 8px 16px;
  text-decoration: none;
  text-transform: uppercase;
  transition: background-color, box-shadow, color 0.4s;
}

.cta-btn {
  background-color: var(--primary-color);
  color: white;
}

.cta-btn:focus,
.cta-btn:hover {
  background-color: var(--primary-dark);
  box-shadow: 0 0 3px 3px var(--primary-light);
}

.cta-btn:disabled {
  background-color: #eee;
  border-color: var(--basic-text);
  color: var(--basic-text);
}

.cancel-btn {
  background-color: white;
  color: var(--primary-color);
}

.cancel-btn:focus,
.cancel-btn:hover {
  background-color: var(--primary-dark);
  box-shadow: 0 0 3px 3px var(--primary-light);
  color: white;
}

.username-btn {
  background-color: transparent;
  border: none;
  border-bottom: 2px solid transparent;
  font-size: 1.4em;
  transition: all 0.4s;
}

.username-btn:focus,
.username-btn:hover {
  border-color: var(--primary-color);
  color: var(--primary-color);
  cursor: pointer;
}

.my-input {
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  font-size: 1.6em;
  outline: none;
  padding: 1rem;
  transition: box-shadow 0.4s;
  width: 80%;
}

.my-input:focus,
.my-input:hover,
.search-input:focus,
.search-input:hover {
  box-shadow: 0 0 3px 3px var(--primary-dark);
}

/* Change SVG color */

/* Found at this CodePen: https://codepen.io/sosuke/pen/Pjoqqp */
.filter-primary {
  filter: invert(11%) sepia(98%) saturate(7005%) hue-rotate(3deg) brightness(89%) contrast(113%);
}

.screen-reader-text {
  left: -99999px;
  position: absolute;
  top: -99999px;
}

/* Flex Classes */

.flex {
  display: flex;
}

.flex--column {
  flex-direction: column;
}

.flex--justify-around {
  justify-content: space-around;
}

.flex--justify-between {
  justify-content: space-between;
}

.flex--justify-center {
  justify-content: center;
}

.flex--justify-end {
  justify-content: flex-end;
}

.flex--justify-evenly {
  justify-content: space-evenly;
}

.flex--justify-start {
  justify-content: flex-start;
}

.flex--align-center {
  align-items: center;
}

.flex--align-end {
  align-items: flex-end;
}

.flex--wrap {
  flex-wrap: wrap;
}

